# quicklog

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
quicklog/: Cargo.toml  build.rs
quicklog-bench/: Cargo.toml  README.md
quicklog-bench/benches/: logger_benchmark.rs  quicklog_benchmark.rs  serialize_benchmark.rs
quicklog-bench/benches/common/: mod.rs
quicklog-clock/: Cargo.toml
quicklog-clock/src/: lib.rs  quanta.rs
quicklog-flush/: Cargo.toml
quicklog-flush/src/: file_flusher.rs  lib.rs  noop_flusher.rs  stderr_flusher.rs  stdout_flusher.rs
quicklog-macros/: Cargo.toml
quicklog-macros/src/: args.rs  derive.rs  expand.rs  format_arg.rs  lib.rs  quicklog.rs
quicklog/benches/: README.md  common.rs  logger_benchmark.rs  quicklog_benchmark.rs  serialize_benchmark.rs
quicklog/benches/common/: mod.rs
quicklog/examples/: README.md  defer.rs  filter.rs  flush_file.rs  json.rs  macros.rs  serialize.rs  stress.rs
quicklog/src/: buffer.rs  callsite.rs  constants.rs  fmt.rs  formatter.rs  level.rs  lib.rs  macros.rs  serialize.rs  target.rs  utils.rs
quicklog/src/queue/: chunk.rs  log.rs  mod.rs  receiver.rs  sender.rs
quicklog/src/serialize/: buffer.rs  mod.rs
quicklog/tests/: basic.rs  capture.rs  closure.rs  custom_fmt.rs  custom_fmt_braces.rs  custom_fmt_invalid.rs  custom_fmt_local.rs  custom_fmt_pattern.rs  default_fmt.rs  defer.rs  derive.rs  eager.rs  fields.rs  filter.rs  fmt.rs  function.rs  json.rs  json_event.rs  level.rs  literal.rs  move.rs  no_timestamp_fmt.rs  reference.rs  serialize.rs  ui.rs
quicklog/tests/common/: mod.rs
quicklog/tests/derive/: derive.rs  derive_00.rs  derive_01.rs  derive_02.rs  derive_03.rs  derive_04.rs  derive_05.rs  derive_06.rs  derive_07.rs  derive_08.rs
quicklog/tests/failures/: assigned_prefixed_arg_after_fmt_str.rs  assigned_prefixed_arg_after_fmt_str.stderr  expr_without_name_1.rs  expr_without_name_1.stderr  expr_without_name_2.rs  expr_without_name_2.stderr  expr_without_name_3.rs  expr_without_name_3.stderr  missing_separating_comma.rs  missing_separating_comma.stderr  mix_serialize_and_non_serialize_fmt_args.rs  mix_serialize_and_non_serialize_fmt_args.stderr  prefixed_arg_after_fmt_str.rs  prefixed_arg_after_fmt_str.stderr  prefixed_expr_without_name.rs  prefixed_expr_without_name.stderr  struct_missing_clone.rs  struct_missing_clone.stderr  struct_missing_debug.stderr  struct_missing_display.rs  struct_missing_display.stderr  struct_missing_serialize.rs  struct_missing_serialize.stderr  target_no_delimiting_comma.rs  target_no_delimiting_comma.stderr  target_wrong_specifier.rs  target_wrong_specifier.stderr  trailing_comma.rs  trailing_comma.stderr  trailing_comma2.rs  trailing_comma2.stderr
