[package]
name = "quicklog-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
delog = "0.1.6"
lazy_format = "2.0.0"
recycle-box = "0.2.0"
quicklog = { path = "../quicklog", features = ["bench"] }
tracing = { version = "0.1.37", default-features = false }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", default-features = false }

[[bench]]
name = "logger_benchmark"
harness = false

[[bench]]
name = "quicklog_benchmark"
harness = false

[[bench]]
name = "serialize_benchmark"
harness = false

