[package]
name = "quicklog-clock"

description = "contains Clock for quicklog logger"
documentation = "https://docs.rs/quicklog-clock"
repository = "https://github.com/ghpr-asia/quicklog"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
keywords = ["quicklog", "logger"]
workspace = "../"
readme = "../README.md"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
quanta = "0.11.1"

[badges]
maintenance = { status = "actively-developed" }
