[package]
name = "quicklog-flush"
descrption = "contains Flusher for quicklog logger"
documentation = "https://docs.rs/quicklog-flush"
repository = "https://github.com/ghpr-asia/quicklog"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
keywords = ["quicklog", "logger"]
workspace = "../"

[badges]
maintenance = { status = "actively-developed" }