[package]
name = "quicklog"
version = "0.3.24"
edition = "2021"

[lib]
name = "quicklog"
path = "src/lib.rs"

[dependencies]
quicklog-flush = { path = "../quicklog-flush", version = "0.1.3", registry = "ghp-cargo-local" }
quicklog-macros = { path = "../quicklog-macros", version = "0.1.17", registry = "ghp-cargo-local" }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
dyn-fmt = "0.4.0"
bumpalo = { version = "3.14.0", features = ["collections"] }
crossbeam-utils = { version = "0.8.16", default-features = false }
minstant = "0.1.4"

[dev-dependencies]
trybuild = "1.0.85"

[badges]
maintenance = { status = "actively-developed" }

[features]
bench = []
