[package]
name = "quicklog"
version = "0.3.30"
edition = "2021"

[lib]
name = "quicklog"
path = "src/lib.rs"

[dependencies]
quicklog-flush = { path = "../quicklog-flush", version = "0.1.3", registry = "ghp-cargo-local" }
quicklog-macros = { path = "../quicklog-macros", version = "0.1.21", registry = "ghp-cargo-local" }
chrono = { version = "0.4.32", default-features = false, features = ["clock"] }
dyn-fmt = "0.4.0"
bumpalo = { version = "3.14.0", features = ["collections"] }
crossbeam-utils = { version = "0.8.16", default-features = false }
minstant = "0.1.4"
nu-ansi-term = { version = "0.49.0", optional = true }

[dev-dependencies]
trybuild = "1.0.85"

[badges]
maintenance = { status = "actively-developed" }

[features]
ansi = ["dep:nu-ansi-term"]
bench = []
target-filter = []
