[package]
name = "quicklog"
version = "0.1.21"
edition = "2021"
description = "fast logging in Rust"
documentation = "https://docs.rs/quicklog"
repository = "https://github.com/ghpr-asia/quicklog"
license = "Apache-2.0"
keywords = ["quicklog", "logger"]
workspace = "../"
readme = "../README.md"
build = "build.rs"
# passing all test cases through trybuild
autotests = false

[lib]
name = "quicklog"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/ui.rs"

[dependencies]
lazy_format = "2.0.0"
quicklog-clock = { path = "../quicklog-clock", version = "0.1.3" }
quicklog-flush = { path = "../quicklog-flush", version = "0.1.3" }
quicklog-macros = { path = "../quicklog-macros", version = "0.1.0" }
quanta = "0.11.1"
once_cell = "1.18.0"
cfg-if = "1.0.0"
heapless = "0.7.16"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }

[dev-dependencies]
criterion = "0.4.0"
delog = "0.1.6"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
recycle-box = { version = "0.2.0"}
trybuild = "1.0.85"

[[bench]]
name = "logger_benchmark"
harness = false

[[bench]]
name = "quicklog_benchmark"
harness = false

[badges]
maintenance = { status = "actively-developed" }
